--- a/test.html
+++ b/test.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Corse</title>
+	<title>The weather today</title>
 </head>
 <body>
-	<h1> course this is a great course</h1>
+	<h1> Mar 2 Weather</h1>
+	<p> today is a great day for outside activity and hang out with friends.</p>
+	<p> However, I have a lot of things to do for today. A lot of homeworks are waiting for me to do</p>
+	<footer>
+		<hr>
+		<p>tech suport is HuyenPhan</p>
+		
 
+	</footer>
+   
 </body>
 </html>
